try to fix bug on mobile

--- a/client/sass/_content.scss
+++ b/client/sass/_content.scss
@@ -96,7 +96,7 @@
 
     @media screen and (max-width: $breakpoints-tablet) {
       flex-direction: column;
-      min-height: 600px;
+      height: 80vh;
 
       .audio-container {
         flex: 1;
